--- a/application/themes/af/css/ie.css
+++ b/application/themes/af/css/ie.css
@@ -1,4 +1,34 @@
+/*.header {height: 58px;}*/
+.full-width {width: 175px; margin-top: -15px;}
+.navbar {height: 58px;}
+.navbar-nav .dropdown-menu {position:absolute; background: #ffffff;}
+.navbar-default .navbar-nav li a {position: relative; z-index: 1;}
+/*.top-section {position: relative; top: 70px;}*/
 .target-list .target {margin-bottom: 0;}
 .target-list .target--world {top: 59px;}
 .target-list .target--privacy {top: 165px;}
 .chart .label-axis-y {top: -12px;left:0;}
+/* download button */
+.download-devices-img img {width: 362px; height: 362px; position: relative; z-index: 0;}
+#HTMLBlock1500 {position: relative; z-index: 100;}
+#HTMLBlock1500 .btn-group {position: relative; height: 270px; width: 300px;}
+#HTMLBlock1500 .dropdown-menu {position: relative; top: 0px; left: 0 !important;}
+/* news */
+.ccm-block-page-list-title a {font-size: 22px;}
+/* advertise */
+.chart {display: none;}
+/* careers */
+.careers-video {height: 600px;}
+.careers-top .wrapper {float: right;}
+
+
+@media all and (max-width:992px) {
+    navbar {height: 72px !important;}
+    .navbar .container {height: 58px !important; background-color: none;}
+    #vi {height: 130px;}
+    /*.nav.navbar-nav {height: 250px; z-index: 1000;}*/
+}
+
+@media all and (max-width:620px) {
+}
+
